Add BLACKLIST_****.csv.gz to create blacklist func

--- a/data-processing/Makefile
+++ b/data-processing/Makefile
@@ -1,5 +1,6 @@
 L0_TBL1=L0-DMPD_CDMA_THJWQ_INF_201606_sample.csv.gz
 L1_TBL1=L1-CDMA_THJWQ_201606.csv.gz
+BLACKLIST_FILE=BLACKLIST_201606.csv.gz
 L1_SQLITE3_LOAD_SCRIPT=load-L1-thjwq.sql
 L2_SQLITE3_PROCESS_SCRIPT=make-L2-tables.sql
 #MD5_HASH_AWK=md5-hash-column.awk
@@ -34,10 +35,13 @@ $(L1_TBL1): $(L0_TBL1)
 
 $(HAWK_DB): $(L1_TBL1)
 	gunzip -c $(L1_TBL1) > $(basename $(L1_TBL1))
+	gunzip -c $(BLACKLIST_FILE) > $(basename $(BLACKLIST_FILE))
 	sqlite3 $(HAWK_DB) < $(L1_SQLITE3_LOAD_SCRIPT)
 	rm -rf $(basename $(L1_TBL1))
+	rm -rf $(basename $(BLACKLIST_FILE))
 	sqlite3 $(HAWK_DB) < $(L2_SQLITE3_PROCESS_SCRIPT)
 
 
 clean:
-	rm -rf $(L1_TBL1) $(basename $(L1_TBL1)) $(HAWK_DB)
+	rm -rf $(L1_TBL1) $(basename $(L1_TBL1)) 
+	rm -rf $(basename $(BLACKLIST_FILE)) $(HAWK_DB)
